tests/expr/array.err.out
error: array.err.li 2,13: wrond field `x`, expecting `len` or `init`
    2 |   _ = []int{x: 0}
      |             ^^^^
